# types/invoice-type.go
@@ -1,0 +1,6 @@
+package types
+
+type Invoice struct {
+	Order_id       string
+	Payment_method string
+}
